.github/lean_quality/fixtures/research_legacy_refs/negative/aggregate/Formal/AG/Research/Basic.lean
def researchAggregate : Nat := 0
